Revert "prevents page shifting if page has no scrollbar"
This reverts commit 99ad18d40bbe7960ddf0ccc313f808d9f0311951.

--- a/goobi-viewer-core/WebContent/resources/css/dev/viewer.css
+++ b/goobi-viewer-core/WebContent/resources/css/dev/viewer.css
@@ -65,8 +65,6 @@
 html {
   height: auto;
   font-size: 100%;
-  margin-left: calc(100vw - 100%);
-  /* prefents page shifting if page has no scrollbar */
 }
 body {
   height: 100%;
