--- a/goobi-viewer-core/WebContent/resources/css/less/viewer/general.less
+++ b/goobi-viewer-core/WebContent/resources/css/less/viewer/general.less
@@ -4,7 +4,6 @@
 html {
     height: auto;
     font-size: 100%;
-    margin-left: calc(~"100vw - 100%"); /* prefents page shifting if page has no scrollbar */
 }
 
 body {
